changed x button to trash button with a pop up alert, added gradients to modal textarea with before and after pseudo classes, added a bunch of gradients throughout, hover states, single line edge cases to remove gradient (where text preview is one line), pointers, fixed h2/random poems appearing, key down input focuses on the textarea, shift + key submits/saves text, some small various tweaks

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 :root {
 	--background-color: #ffffff;
 	--text-color: #333333;
+	--second-color: #666666;
 	--highlight-color: red;
 	--font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	--padding: 1.5rem;
@@ -10,6 +11,8 @@
 	--button-padding: 0.75rem;
 	--line-height: 1.5;
 	--font-weight: 500;
+	--header-weight: 800;
+	/* https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/caret-color */
 	caret-color: var(--highlight-color);
 }
 
@@ -19,11 +22,25 @@ h1, h2 {
 	padding-block-start: var(--padding);
 	line-height: var(--line-height);
 	display: block;
-	text-transform: uppercase;
+	font-weight: 300;
+	/* text-transform: uppercase; */
 }
 
 h1 {
 	background-color: var(--background-color);
+	position: sticky;
+	top: 0;
+}
+
+h1.gradient::after {
+	content: '';
+	position: absolute;
+	bottom: -2.5rem;
+	left: 0;
+	right: 0;
+	height: 2.5rem;
+	background: linear-gradient(to bottom, var(--background-color), transparent);
+	pointer-events: none;
 }
 
 /* main text */
@@ -49,6 +66,27 @@ h1, h2, p, textarea {
 	color: transparent;
 }
 
+.poem-preview:hover {
+	color: var(--highlight-color);
+	background: linear-gradient(to bottom, var(--text-color) 0%, transparent 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	background-clip: text;
+	color: transparent;
+}
+
+.poem-preview.single-line {
+	background: none;
+	color: var(--highlight-color);
+	-webkit-text-fill-color: var(--highlight-color);
+}
+
+.poem-preview.single-line:hover {
+	background: none;
+	color: var(--text-color);
+	-webkit-text-fill-color: var(--text-color);
+}
+
 .poem-expanded {
 	color: var(--text-color);
 	font-family: var(--font);
@@ -56,6 +94,10 @@ h1, h2, p, textarea {
 	line-height: var(--line-height);
 	font-weight: var(--font-weight);
 	resize: none;
+}
+
+#poems {
+	margin-block-end: calc(var(--padding) * 6);
 }
 
 body::selection {
@@ -123,30 +165,34 @@ h2,
 	/* background-color: var(--background-color); */
 }
 
+textarea::placeholder {
+	color: var(--second-color);
+}
+
 /* + button */
 #submit {
 	flex: 0 0 auto;
 	padding: var(--button-padding);
+	/* slight adjustment here to line everything up */
 	transform: translateY(0.25rem);
 }
 
 #submit svg {
-	transition: transform 0.4s ease, color 0.4s ease;
+	transition: transform 0.4s ease, color 0.4s ease, opacity 0.6s ease;
+	cursor: pointer;
+	color: var(--second-color);
 }
 
-.allow svg {
+#submit.allow svg {
 	transform: rotate(90deg);
 	color: var(--highlight-color);
-}
-
-.allow {
-	cursor: pointer;
 }
 
 /* poem sections */
 .poem,
 .random-poem {
-	padding: var(--padding);
+	padding-inline: var(--padding);
+	padding-block-start: var(--padding);
 	max-height: 70%;
 	overflow: hidden;
 }
@@ -165,21 +211,50 @@ section.random-poem {
 #modal {
 	position: fixed;
 	background-color: var(--background-color);
+	display: flex;
 	flex-direction: column;
 	width: 100vw;
 	height: 90vh;
 	opacity: 0;
 	transition: opacity 0.4s ease;
-	z-index: 2;
+	z-index: 3;
 	inset: 0;
 	padding: var(--padding);
 }
 
-#modal-text {
+#modal-text-container {
+	position: relative;
 	flex: 1 1 auto;
 	width: 100%;
 	height: 100%;
+}
+
+#modal-text-container::before,
+#modal-text-container::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	right: 0;
+	height: var(--padding);
+	pointer-events: none;
+	z-index: 1;
+}
+
+#modal-text-container::before {
+	top: 0;
+	background: linear-gradient(to bottom, var(--background-color), transparent);
+}
+
+#modal-text-container::after {
+	bottom: 0;
+	background: linear-gradient(to top, var(--background-color), transparent);
+}
+
+#modal-text {
+	width: 100%;
+	height: 100%;
 	resize: none;
+	padding-block: var(--padding);
 }
 
 #modal-buttons {
@@ -196,21 +271,15 @@ section.random-poem {
 
 #modal-buttons button {
 	padding: var(--button-padding);
-}
-
-#modal-buttons::before {
-	content: '';
-	position: absolute;
-	top: -4rem;
-	left: 0;
-	right: 0;
-	height: 4rem;
-	background: linear-gradient(to bottom, transparent, var(--background-color));
-	pointer-events: none;
+	cursor: pointer;
 }
 
 #modal-buttons svg {
 	transition: transform 0.4s ease, color 0.4s ease;
 	width: var(--button-size);
 	color: var(--highlight-color);
+}
+
+#modal.hidden {
+	display: none;
 }
